--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: '/'
 description: Strona o mnie i moich zainteresowaniach
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: green # blue turquoise green berry orange ceramic
-chrome_mobile_color: #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
+chrome_mobile_color: '#5BB66F' #use hex colors (ex:#1976d2) or leave empty if you don't want a color for chrome mobile searchbar
 
 # Tracker
 analytics: 
