--- a/_data/data.yml
+++ b/_data/data.yml
@@ -101,7 +101,7 @@ projects:
 publications:
     title: Publications
     intro: |
-      None as for now. Will for sure add something here one day1
+      None as for now. Will for sure add something here one day!
     papers:
 
 skills:
